--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-   port: 9080
+  port: 9080
 spring:
   application:
     name: bus-seat-booking
@@ -12,15 +12,13 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
-    database-platform: org.hibernate.dialect.MySQL8Dialect
+    #database-platform: org.hibernate.dialect.MySQLDialect
     properties:
       hibernate:
         format_sql: true
 logging:
   level:
     root: INFO
-    org.springframework.security: DEBUG  # Logs authentication and authorization details
-    org.springframework.web: INFO  # Logs HTTP requests and responses
+    org.springframework.security: DEBUG # Logs authentication and authorization details
+    org.springframework.web: INFO # Logs HTTP requests and responses
     org.springframework.boot.autoconfigure.security: DEBUG
-
-
